# orchestrator_emulator

./: .env  .gitignore  .pdm-python  .pdm.toml  Dockerfile  Dockerfile.loadtest  KAFKA_MONITORING.md  KAFKA_TESTING.md  README.loadtest.md  README.md  TROUBLESHOOTING.md  architecture_diagram.mmd  check_tasks.py  config.json  docker-compose.loadtest.yml  docker-compose.yml  docker_consumer_test.py  load_test.py  load_test_results_20250321-004758.json  network_check.py  pyproject.toml  redpanda.yaml  requirements.txt  run_emulator.sh  run_load_test.sh  setup_pdm.sh  simple_test.py  test.py  test_consumer_health.py  test_direct_partition.py  test_emulator_connection.py  test_eventhub.py  test_kafka_config.py  test_latest_message.py  test_load.py  test_partitioning.py
.devcontainer/: devcontainer.json
app/: __init__.py  database.py  event_hub.py  main.py  middleware.py  utils.py
app/api/: __init__.py  endpoints.py  models.py  router.py
app/core/: config.py  logging.py
app/db/: postgres.py  redis.py
app/models/: __init__.py  orchestrator.py  task_tracking.py
app/orchestrators/: __init__.py  router.py
app/orchestrators/modules/rebates/: api.py  crud.py  schema.py
app/orchestrators/modules/revenue/: api.py  crud.py  schema.py
app/orchestrators/modules/specialty/: api.py  crud.py  schema.py
app/schemas/: __init__.py  task_tracking.py
app/services/: __init__.py  event_hub.py  eventhub.py  http_event_hub.py  kafka_event_hub.py  orchestrator.py  processor.py  storage.py  task_tracking.py
migrations/: env.py
migrations/versions/: initial_migration.py
mock-services/: Dockerfile  app.py  pyproject.toml  start.sh
scripts/: send_test_message.sh  setup_kafka.sh  test_message.json
tests/: __init__.py  requirements-dev.txt  test_orchestrator.py
