[project]
name = "orchestrator-emulator"
version = "0.1.0"
description = "Service to orchestrate processing across various sub-services"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "fastapi==0.109.2",
    "uvicorn==0.27.1",
    "httpx==0.26.0",
    "pydantic==2.6.1",
    "azure-eventhub==5.11.5",
    "azure-eventhub-checkpointstoreblob-aio==1.1.4",
    "python-dotenv==1.0.0",
    "azure-storage-blob==12.19.0",
    "confluent-kafka==2.3.0",
    "sqlalchemy==2.0.27",
    "psycopg2-binary==2.9.9",
    "alembic==1.13.1",
    "asyncpg==0.29.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
] 