[project]
name = "truecost_orchestrator"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Neeraj Narayanan", email = "nfornj@gmail.com"},
]
dependencies = [
    "fastapi==0.104.0",
    "uvicorn==0.23.2",
    "pydantic==2.4.2",
    "pydantic-settings==2.0.3",
    "redis==5.0.1",
    "asyncpg==0.28.0",
    "python-json-logger==2.0.7",
    "azure-eventhub==5.11.5",
    "azure-identity==1.15.0",
    "aiohttp==3.9.1",
    "kafka-python==2.0.2",
    "confluent-kafka>=2.8.2",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
