[project]
name = "orchestrator-mock-services"
version = "0.1.0"
description = "Mock services for the orchestrator emulator"
requires-python = ">=3.12,<3.13"

dependencies = [
    "fastapi>=0.109.2",
    "uvicorn>=0.27.1",
    "pydantic>=2.6.1",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = false 